- add a script to fix tv STRM files by injecting the show name into the filename
- push "update_strm" script
- testing proxy for live tv recording
- testing proxy for live tv
- add tv support for fix_srt_naming
- emby: force audio remux parameter added
- working on: Remux audio midtrack doesn't playback #2
- implement: ffprobe - override ffprobe to block PGS from being read by Emby #1
