@@ -1,3 +1,4 @@
+- add a script to cleanup a m3u8 iptv file
 - add a script to fix tv STRM files by injecting the show name into the filename
 - push "update_strm" script
 - testing proxy for live tv recording
